--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "sequelize": "^6.23.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.14",
     "@types/express-session": "^1.17.5",
     "@types/node": "^18.7.18",
