--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
+    "install": "",
+    "postinstall": "yarn build",
     "start": "if-env NODE_ENV=production && yarn start:prod || yarn start:dev",
-    "start:prod": "node dist/index.js",
-    "start:dev": "nodemon --exec ts-node src/index.ts",
-    "test": ""
+    "start:prod": "node dist",
+    "start:dev": "nodemon --exec yarn dev:server",
+    "dev:server": "./bin/dev_server.sh",
+    "build": "./bin/build.sh",
+    "clean": "rimraf dist"
   },
   "repository": {
     "type": "git",
@@ -37,8 +41,6 @@
     "@types/express-session": "^1.17.5",
     "@types/node": "^18.7.18",
     "nodemon": "^2.0.20",
-    "ts-node": "^10.9.1",
-    "tslib": "^2.4.0",
     "typescript": "^4.8.3"
   }
 }
