--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,17 @@
 {
   "compilerOptions": {
+    "skipLibCheck": true,
     "strict": true,
     "removeComments": true,
     "noEmitOnError": true,
     "target": "es6",
     "module": "CommonJS",
     "moduleResolution": "Node",
-    "rootDir": "./src",
-    "outDir": "./dist",
+    "rootDir": "src",
+    "outDir": "dist",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "typeRoots": ["src/@types", "node_modules/@types"]
-  }
+  },
+  "exclude": ["node_modules"]
 }
