--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "install": "",
     "postinstall": "yarn build",
     "start": "if-env NODE_ENV=production && yarn start:prod || yarn start:dev",
     "start:prod": "node dist",
-    "start:dev": "nodemon --exec yarn dev:server",
-    "dev:server": "./bin/dev_server.sh",
+    "start:dev": "nodemon --exec yarn dev",
+    "dev": "./bin/dev_server.sh",
     "build": "./bin/build.sh",
-    "clean": "rimraf dist"
+    "clean": "rimraf dist",
+    "seed": "ts-node src/models/seeds"
   },
   "repository": {
     "type": "git",
@@ -32,6 +32,7 @@
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
     "if-env": "^1.0.4",
+    "lorem-ipsum": "^2.0.8",
     "mysql2": "^2.3.3",
     "sequelize": "^6.23.0"
   },
@@ -41,6 +42,7 @@
     "@types/express-session": "^1.17.5",
     "@types/node": "^18.7.18",
     "nodemon": "^2.0.20",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
   }
 }
