--- a/package.json
+++ b/package.json
@@ -41,7 +41,11 @@
     "@types/express": "^4.17.14",
     "@types/express-session": "^1.17.5",
     "@types/node": "^18.7.18",
+    "eslint": "^8.39.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "nodemon": "^2.0.20",
+    "prettier": "^2.8.8",
     "ts-node": "^10.9.1",
     "tslib": "^2.4.1",
     "typescript": "^4.8.3"
